[package]
name = "bevy-01"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
# remove dynamic_linking when shipping and remove if having issues on windows
bevy = { version = "0.11.0", features = ["dynamic_linking"] }
